--- a/assets/src/scss/2.mixins/_mediaqueries.scss
+++ b/assets/src/scss/2.mixins/_mediaqueries.scss
@@ -38,6 +38,11 @@
 		@content;
 	}
 }
+@mixin large-only {
+	@media only screen and (min-width: rem($desktop-threshold-stripped)) {
+		@content;
+	}
+}
 
 @mixin desktop-only {
 	@media only screen and (min-width: rem($tablet-threshold-stripped)) {
